syntax = "proto3";

package com.gitlab.isard.isardvdi.hyper;
option go_package = "gitlab.com/isard/isardvdi/hyper/pkg/proto";

service Hyper {
    rpc DesktopStart(DesktopStartRequest) returns (DesktopStartResponse) {}
    rpc DesktopStop(DesktopStopRequest) returns (DesktopStopResponse) {}
    rpc DesktopState(DesktopStateRequest) returns (DesktopStateResponse) {}
    rpc DesktopValidate(DesktopValidateRequest) returns (DesktopValidateResponse) {}
    rpc DesktopSuspend(DesktopSuspendRequest) returns (DesktopSuspendResponse) {}
    rpc DesktopResume(DesktopResumeRequest) returns (DesktopResumeResponse) {}
    rpc DesktopSave(DesktopSaveRequest) returns (DesktopSaveResponse) {}
    rpc DesktopRestore(DesktopRestoreRequest) returns (DesktopRestoreResponse) {}    
    rpc DesktopXMLGet(DesktopXMLGetRequest) returns (DesktopXMLGetResponse) {}
    rpc DesktopList(DesktopListRequest) returns (DesktopListResponse) {}
    rpc DesktopMigrate(DesktopMigrateRequest) returns (DesktopMigrateResponse) {}
}

message DesktopStartRequest {
    string xml = 1;
}

message DesktopStartResponse {
    string xml = 1;
}

message DesktopStopRequest {
    string id = 1;
}

message DesktopStopResponse {}

message DesktopStateRequest {
    string id = 1;
}

message DesktopStateResponse {
    enum DesktopState {
        DESKTOP_STATE_UNKNOWN = 0;
        DESKTOP_STATE_STARTED = 1;
        DESKTOP_STATE_STOPPED = 2;
        DESKTOP_STATE_STOPPING = 3;
        DESKTOP_STATE_PAUSED = 4;
        DESKTOP_STATE_SUSPENDED = 5;
        DESKTOP_STATE_BLOCKED = 6;
        DESKTOP_STATE_CRASHED = 7;
        DESKTOP_STATE_NOSTATE = 8;
    }
    DesktopState state = 1;
}

message DesktopValidateRequest {
    string xml = 1;
}

message DesktopValidateResponse {}

message DesktopSuspendRequest {
    string id = 1;
}

message DesktopSuspendResponse {}

message DesktopResumeRequest {
    string id = 1;
}

message DesktopResumeResponse {}

message DesktopSaveRequest {
    string id = 1;
    string path = 2;
}

message DesktopSaveResponse {}

message DesktopRestoreRequest {
    string path = 1;
}

message DesktopRestoreResponse {}

message DesktopListRequest {}

message DesktopListResponse {
    repeated string ids = 1;
}

message DesktopXMLGetRequest {
    string id = 1;
}

message DesktopXMLGetResponse {
    string xml = 1;
}

message DesktopMigrateRequest {
    string id = 1;
    string hyper = 2;
}

message DesktopMigrateResponse {}
